# internal/model/message.go
@@ -1,19 +1,23 @@
 package model
 
-import "time"
+import (
+	_ "github.com/vsitnev/sync-manager/pkg/tps"
+	"time"
+)
 
 type Message struct {
 	ID        int         `json:"id" db:"id"`
 	Routing   string      `json:"routing" db:"routing"`
 	Message   AmqpMessage `json:"message" db:"message"`
 	Dead      bool        `json:"dead" db:"dead"`
+	Retried   bool        `json:"retried" db:"retried"`
 	CreatedAt time.Time   `json:"created_at" db:"created_at"`
 }
 
-// FIXME: Data field must be shown as empty object in swagger schema
 type AmqpMessage struct {
-	ID        string                 `json:"id" db:"id"`
-	Operation string                 `json:"routing" db:"routing"`
-	Created   int32                  `json:"message" db:"message"`
-	Data      struct{}               `json:"dead,omitempty" db:"dead" swaggertype:"object,{}="`
+	MessageID string      `json:"message_id" db:"id" binding:"required"`
+	Source    string      `json:"source" db:"source" binding:"required"`
+	Operation string      `json:"operation" db:"operation" binding:"required"`
+	Created   int64       `json:"created" db:"created" binding:"required"`
+	Data      interface{} `json:"data" db:"data" binding:"required"`
 }
